# swift-precompiler

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/workflows/: build.yml
assets/: PrecompiledTemplate.swift
src/: config.rs  expression.rs  main.rs
