[package]
name = "swift-precompiler"
description = "A precompiler for Swift that allows you to use additional macros, include files, and more."
version = "0.1.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/swift-precompiler"
homepage = "https://github.com/lockieluke/swift-precompiler"
repository = "https://github.com/lockieluke/swift-precompiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
colored = "2.1.0"
fancy-regex = "0.13.0"
glob = "0.3.1"
path-absolutize = "3.1.1"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
base64-simd = "0.8.0"

[[bin]]
name = "swift-precompiler"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
